--- a/src/css/iconos.css
+++ b/src/css/iconos.css
@@ -1,6 +1,6 @@
 .eye-solid.icon {
   color: #000;
-  position: absolute;
+  /*position: absolute;*/
   margin-left: 3px;
   margin-top: 3px;
   width: 12px;
@@ -8,11 +8,11 @@
   border-radius: 70% 15%;
   border: solid 1px currentColor;
   -webkit-transform: rotate(45deg);
-  transform: rotate(45deg);
+          transform: rotate(45deg);
 }
 
 .eye-solid.icon:before {
-  content: "";
+  content: '';
   position: absolute;
   left: 2px;
   top: 2px;
